--- a/IFSUL_CRUD/web/estilo.css
+++ b/IFSUL_CRUD/web/estilo.css
@@ -1,4 +1,17 @@
 .centro
 {
-text-align: center;    
+    text-align: center;
 }
+
+table
+{
+    border:solid;
+    margin-top: 20px;
+    
+}
+td
+{
+    padding:5px;
+    
+}
+
